VAL-163 added siva test module based on pdf validator test module

--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -19,6 +19,7 @@
         <module>siva-validation-proxy</module>
         <module>siva-sample-application</module>
         <module>siva-tsl-loader</module>
+        <module>siva-test</module>
     </modules>
 
     <properties>
