--- a/validation-services-parent/validation-commons/pom.xml
+++ b/validation-services-parent/validation-commons/pom.xml
@@ -9,18 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tsl-loader</artifactId>
+    <artifactId>validation-commons</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-            <artifactId>dss-service</artifactId>
-        </dependency>
-
-        <!-- Spring Boot -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>dss-spi</artifactId>
         </dependency>
     </dependencies>
 
