--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -15,8 +15,8 @@
     <version>2.0.1.SNAPSHOT</version>
 
     <modules>
-        <module>siva-webapp</module>
         <module>siva-validation-proxy</module>
+        <module>siva-webapp</module>
         <module>siva-sample-application</module>
     </modules>
 
@@ -24,6 +24,7 @@
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
         <!--<spring.version>4.2.5.RELEASE</spring.version>-->
+        <!--<spring.boot.version>1.4.0.BUILD-SNAPSHOT</spring.boot.version>-->
         <spring.boot.version>1.4.0.M2</spring.boot.version>
         <!--<slf4j.version>1.6.6</slf4j.version>-->
         <!--<logback-classic.version>1.0.13</logback-classic.version>-->
@@ -65,6 +66,27 @@
                 <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                <artifactId>validation-commons</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                <artifactId>pdf-validation-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                <artifactId>bdoc-validation-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                <artifactId>tsl-loader</artifactId>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -123,6 +145,22 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20160212</version>
             </dependency>
 
             <!--<dependency>
