--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -8,13 +8,91 @@
         <version>2.0.1.SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>validation-services-parent</artifactId>
     <packaging>pom</packaging>
+    <artifactId>validation-services-parent</artifactId>
+
     <modules>
+        <module>validation-commons</module>
+        <module>pdf-validation-service</module>
         <module>bdoc-validation-service</module>
         <module>tsl-loader</module>
-        <module>pdf-validation-service</module>
     </modules>
+
+    <properties>
+        <project.encoding>UTF-8</project.encoding>
+        <language.level>1.8</language.level>
+        <dss.version>4.5.0</dss.version>
+        <spring.boot.version>1.4.0.M2</spring.boot.version>
+        <!--<spring.boot.version>1.4.0.BUILD-SNAPSHOT</spring.boot.version>-->
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- DSS -->
+            <dependency>
+                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+                <artifactId>sd-dss</artifactId>
+                <version>${dss.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- Spring boot -->
+            <dependency>
+                <!-- Import dependency management from Spring Boot -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20160212</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <encoding>${project.encoding}</encoding>
+                    <source>${language.level}</source>
+                    <target>${language.level}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
 
 </project>
