--- a/validation-services-parent/bdoc-validation-service/pom.xml
+++ b/validation-services-parent/bdoc-validation-service/pom.xml
@@ -10,5 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bdoc-validation-service</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>validation-commons</artifactId>
+            <version>2.0.1.SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.digidoc4j</groupId>
+            <artifactId>digidoc4j</artifactId>
+            <version>${digidoc4j.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
