--- a/validation-services-parent/tsl-loader/pom.xml
+++ b/validation-services-parent/tsl-loader/pom.xml
@@ -13,8 +13,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>org.digidoc4j.dss</groupId>
             <artifactId>dss-service</artifactId>
+            <version>${dss.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.digidoc4j.dss</groupId>
+            <artifactId>dss-tsl-jaxb</artifactId>
+            <version>${dss.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.digidoc4j.dss</groupId>
+            <artifactId>dss-xades</artifactId>
+            <version>${dss.version}</version>
         </dependency>
 
         <!-- Spring Boot -->
