--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -30,7 +30,7 @@
         <junit.version>4.12</junit.version>
         <mockito.version>2.0.2-beta</mockito.version>
         <powermock.version>1.6.2</powermock.version>
-        <dss.version>4.6.RC1.d4j.2</dss.version>
+        <dss.version>4.6.d4j.2</dss.version>
     </properties>
 
     <dependencyManagement>
