VAL-170 intermediate save status commit

--- a/validation-services-parent/bdoc-validation-service/pom.xml
+++ b/validation-services-parent/bdoc-validation-service/pom.xml
@@ -21,6 +21,19 @@
             <artifactId>digidoc4j</artifactId>
             <version>${digidoc4j.version}</version>
         </dependency>
+
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Lombok for getters and setters -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
