--- a/validation-services-parent/pdf-validation-service/pom.xml
+++ b/validation-services-parent/pdf-validation-service/pom.xml
@@ -63,6 +63,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+
+        <!-- Lombok for getters and setters -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
