--- a/validation-services-parent/bdoc-validation-service/pom.xml
+++ b/validation-services-parent/bdoc-validation-service/pom.xml
@@ -18,6 +18,10 @@
             <groupId>org.digidoc4j</groupId>
             <artifactId>digidoc4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
