VAL-170 implemented qualified report and use it with bdoc, get report data via d4j api instead of report

--- a/validation-services-parent/validation-commons/pom.xml
+++ b/validation-services-parent/validation-commons/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.digidoc4j.dss</groupId>
             <artifactId>dss-spi</artifactId>
         </dependency>
+        <!-- Lombok for getters and setters -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
