--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
-sudo: required
-dist: trusty
+sudo: false
 jdk:
   - oraclejdk8
 before_install:
@@ -11,5 +10,3 @@ branches:
 install: true
 script:
   - ./mvnw clean install
-notifications:
-  emai
