MAINTENANCE: Fixed Spring version in validation-services-parent modules and changed artifact group ID

--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>siva</artifactId>
-        <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+        <groupId>io.github.openeid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,8 +22,6 @@
         <dss.version>4.6.d4j.2</dss.version>
         <spring.boot.version>1.4.0.M2</spring.boot.version>
         <digidoc4j.version>1.0.3</digidoc4j.version>
-
-        <!--<spring.boot.version>1.4.0.BUILD-SNAPSHOT</spring.boot.version>-->
     </properties>
 
     <dependencyManagement>
@@ -36,6 +34,15 @@
                 <version>${digidoc4j.version}</version>
             </dependency>
 
+            <!-- Spring boot -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- DSS -->
             <dependency>
                 <groupId>org.digidoc4j.dss</groupId>
@@ -45,15 +52,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- Spring boot -->
-            <dependency>
-                <!-- Import dependency management from Spring Boot -->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -71,11 +69,34 @@
                 <version>20160212</version>
             </dependency>
 
-            <!-- Lombok for getters and setters -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.21</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>1.7.21</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>1.7.21</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.1.7</version>
             </dependency>
 
         </dependencies>
@@ -109,5 +130,16 @@
             <url>http://repo.spring.io/milestone</url>
         </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
