--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>siva-parent</artifactId>
-        <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+        <groupId>io.github.openeid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -40,19 +40,19 @@
         </dependency>
 
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>io.github.openeid.siva</groupId>
             <artifactId>validation-commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>io.github.openeid.siva</groupId>
             <artifactId>pdf-validation-service</artifactId>
         </dependency>
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>io.github.openeid.siva</groupId>
             <artifactId>bdoc-validation-service</artifactId>
         </dependency>
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>io.github.openeid.siva</groupId>
             <artifactId>tsl-loader</artifactId>
         </dependency>
 
