VAL-141 Added DDOC validation functionality

--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -53,6 +53,10 @@
         </dependency>
         <dependency>
             <groupId>io.github.openeid.siva</groupId>
+            <artifactId>ddoc-validation-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openeid.siva</groupId>
             <artifactId>tsl-loader</artifactId>
         </dependency>
 
