--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -80,6 +80,11 @@
             </dependency>
             <dependency>
                 <groupId>io.github.openeid.siva</groupId>
+                <artifactId>ddoc-validation-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.openeid.siva</groupId>
                 <artifactId>tsl-loader</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -159,6 +164,28 @@
                 <version>1.8.0.10</version>
             </dependency>
 
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                <version>9.3.1.v20150714</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-webapp</artifactId>
+                <version>9.3.1.v20150714</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -168,9 +195,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
-                <configuration>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
-                </configuration>
             </plugin>
         </plugins>
 
