--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -13,8 +13,9 @@
         <module>validation-commons</module>
         <module>pdf-validation-service</module>
         <module>bdoc-validation-service</module>
-        <module>tsl-loader</module>
+        <module>ddoc-validation-service</module>
         <module>xroad-validation-service</module>
+        <module>tsl-loader</module>
     </modules>
 
     <properties>
@@ -23,6 +24,8 @@
         <dss.version>4.6.d4j.2</dss.version>
         <spring.boot.version>1.4.0.M2</spring.boot.version>
         <digidoc4j.version>1.0.3</digidoc4j.version>
+
+        <!--<spring.boot.version>1.4.0.BUILD-SNAPSHOT</spring.boot.version>-->
     </properties>
 
     <dependencyManagement>
@@ -35,20 +38,34 @@
                 <version>${digidoc4j.version}</version>
             </dependency>
 
-            <!-- Spring boot -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <!-- DSS -->
             <dependency>
                 <groupId>org.digidoc4j.dss</groupId>
                 <artifactId>sd-dss</artifactId>
                 <version>${dss.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- JDigiDoc -->
+            <dependency>
+                <groupId>ee.sk.digidoc</groupId>
+                <artifactId>jdigidoc</artifactId>
+                <version>3.12.0</version>
+            </dependency>
+            <dependency>
+                <groupId>iaik.prod</groupId>
+                <artifactId>iaikPkcs11Wrapper</artifactId>
+                <version>1.2.16</version>
+                <scope>system</scope>
+                <systemPath>${basedir}/ddoc-validation-service/src/main/resources/lib/iaikPkcs11Wrapper.jar</systemPath>
+            </dependency>
+
+            <!-- Spring boot -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -69,6 +86,7 @@
                 <version>20160212</version>
             </dependency>
 
+            <!-- Lombok for getters and setters -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
