--- a/validation-services-parent/ddoc-validation-service/pom.xml
+++ b/validation-services-parent/ddoc-validation-service/pom.xml
@@ -21,15 +21,17 @@
             <groupId>ee.sk.digidoc</groupId>
             <artifactId>jdigidoc</artifactId>
         </dependency>
+
         <dependency>
             <groupId>iaik.prod</groupId>
             <artifactId>iaikPkcs11Wrapper</artifactId>
             <scope>system</scope>
             <systemPath>${basedir}/src/main/resources/lib/iaikPkcs11Wrapper.jar</systemPath>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
