--- a/validation-services-parent/ddoc-validation-service/pom.xml
+++ b/validation-services-parent/ddoc-validation-service/pom.xml
@@ -18,22 +18,29 @@
         </dependency>
 
         <dependency>
-            <groupId>ee.sk.digidoc</groupId>
-            <artifactId>jdigidoc</artifactId>
+            <groupId>iaik.pkcs</groupId>
+            <artifactId>iaikPkcs11Wrapper</artifactId>
+            <version>1.2.16</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/extra-jars/iaikPkcs11Wrapper.jar</systemPath>
         </dependency>
 
         <dependency>
-            <groupId>iaik.prod</groupId>
-            <artifactId>iaikPkcs11Wrapper</artifactId>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/resources/lib/iaikPkcs11Wrapper.jar</systemPath>
+            <groupId>ee.sk.digidoc</groupId>
+            <artifactId>jdigidoc</artifactId>
+            <version>3.12.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>iaik.pkcs</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
