MAINTENANCE: switched to package to skip integration tests because they are too noisy right now

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,12 @@ branches:
     - develop
 install: true
 script:
-  - ./mvnw clean install
+  - ./mvnw clean package
+notifications:
+  email:
+    recipients:
+      - mihkel.selgal@nortal.com
+      - andres.voll@nortal.com
+      - allan.juhanson@nortal.com
+    on_success: never
+    on_failure: always
