MAINTENANCE: fixed jdigidoc.cfg loading from JAR file. Added back integration tests to TravisCI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
     - develop
 install: true
 script:
-  - ./mvnw clean package
+  - ./mvnw clean install
 notifications:
   email:
     recipients:
