--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -57,6 +57,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.cryptacular</groupId>
+                <artifactId>cryptacular</artifactId>
+                <version>1.1.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
                 <version>2.7.3</version>
