--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches:
 install: true
 script:
   - ./mvnw clean install
+after_success:
+  - ./mvnw clean test jacoco:report coveralls:report -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN
 notifications:
   email:
     recipients:
