--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,40 @@
         ./mvnw release:update-versions -DautoVersionSubmodules=true
     -->
 
+    <properties>
+        <coveralls.repo.token>NA</coveralls.repo.token>
+    </properties>
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.1.0</version>
+                <configuration>
+                    <failOnServiceError>false</failOnServiceError>
+                    <sourceEncoding>UTF8</sourceEncoding>
+                    <repoToken>${coveralls.repo.token}</repoToken>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.6.201602180812</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/extra-jars/**</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
