--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
                 <version>4.1.0</version>
                 <configuration>
                     <failOnServiceError>false</failOnServiceError>
-                    <sourceEncoding>UTF8</sourceEncoding>
+                    <sourceEncoding>UTF-8</sourceEncoding>
                     <repoToken>${coveralls.repo.token}</repoToken>
                 </configuration>
             </plugin>
@@ -43,6 +43,8 @@
                 <version>0.7.6.201602180812</version>
                 <configuration>
                     <excludes>
+                        <exclude>**/Application.*</exclude>
+                        <exclude>**/*Configuration.*</exclude>
                         <exclude>**/extra-jars/**</exclude>
                     </excludes>
                 </configuration>
@@ -59,6 +61,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
