--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>siva</artifactId>
     <version>2.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>SIVa Digitally signed documents validation service</name>
+    <name>SiVa Digitally signed documents validation service</name>
 
     <modules>
         <module>validation-services-parent</module>
@@ -23,6 +23,8 @@
 
     <properties>
         <coveralls.repo.token>NA</coveralls.repo.token>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <build>
@@ -33,7 +35,6 @@
                 <version>4.1.0</version>
                 <configuration>
                     <failOnServiceError>false</failOnServiceError>
-                    <sourceEncoding>UTF-8</sourceEncoding>
                     <repoToken>${coveralls.repo.token}</repoToken>
                 </configuration>
             </plugin>
