--- a/validation-services-parent/pdf-validation-service/pom.xml
+++ b/validation-services-parent/pdf-validation-service/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>validation-services-parent</artifactId>
         <groupId>io.github.openeid.siva</groupId>
@@ -10,7 +11,7 @@
 
     <artifactId>pdf-validation-service</artifactId>
     <name>SK PDF Validator: Web Service</name>
-	<description>SK PDF Validator: Validator WSDL Web Service</description>
+    <description>SK PDF Validator: Validator WSDL Web Service</description>
 
     <properties>
         <cxf.version>3.0.6</cxf.version>
