MAINTENANCE: Added PDF version of documentation

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install: true
 script:
   - ./mvnw clean install
 after_success:
+  - blah
   - ./mvnw clean test jacoco:report coveralls:report -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN
 notifications:
   email:
