--- a/siva-parent/siva-sample-application/src/main/resources/application-azure.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application-azure.yml
@@ -1,7 +1,6 @@
 server:
   port: 9000
 siva:
-  service:
-    url: "http://siva-open-eid.azurewebsites.net/validate"
+  serviceUrl: "http://siva-open-eid.azurewebsites.net/validate"
 multipart:
   max-file-size: 10MB
