--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -2,7 +2,6 @@ server:
   port: 9000
 siva:
   uploadDirectory: "upload-dir"
-  service:
-    url: "http://localhost:8080/validate"
+  serviceUrl: "http://localhost:8080/validate"
 multipart:
   max-file-size: 10MB
