--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>siva-test</artifactId>
+    <name>SiVa Web Service integration tests</name>
 
     <dependencies>
         <dependency>
