VAL-195, VAL-196 added controller advice, throwing and handling malformed document exception, throw generic exceptions from validation services

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,5 @@
+#JSR-303 bean validation uses this for default messages
+
 validation.error.message.base64 = not valid base64 encoded string
 validation.error.message.documentType = invalid document type
 validation.error.message.reportType = invalid report type
