VAL-227 Changed file upload size to 10Mb

--- a/siva-parent/siva-sample-application/src/main/resources/application-do.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application-do.yml
@@ -2,5 +2,7 @@ server:
   port: 9000
 siva:
   serviceUrl: "http://api.demoapps.eu"
-multipart:
-  max-file-size: 10MB
+spring:
+  http:
+    multipart:
+      max-file-size: "10Mb"
