--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -3,5 +3,7 @@ server:
 siva:
   uploadDirectory: "upload-dir"
   serviceUrl: "http://localhost:8080/validate"
-multipart:
-  max-file-size: 10MB
+spring:
+  http:
+    multipart:
+      max-file-size: "10Mb"
