--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,36 @@
         <module>siva-parent</module>
     </modules>
 
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License, Version 2.1</name>
+            <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>mihkels</id>
+            <name>Mihkel Selgal</name>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>andresvoll</id>
+            <name>Andres Voll</name>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>allanjuhanson</id>
+            <name>Allan Juhanson</name>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+
     <!--
         To update SiVa version for all the modules run below command:
         ./mvnw release:update-versions -DautoVersionSubmodules=true
