VAL-213 Refactored TSL Loader. Now it can be configured to load TSL either from cache or over the network.

--- a/validation-services-parent/pdf-validation-service/src/test/resources/test-tsl-loader-props.yml
+++ b/validation-services-parent/pdf-validation-service/src/test/resources/test-tsl-loader-props.yml
@@ -1,10 +1,8 @@
-trusted:
-  list:
-    source:
-      lotlUrl: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
-      lotlCode: EU
-      scheduler:
-        cron: "0 0 3 * * ?"
+tsl:
+  loadAlwaysFromCache: false
+  url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
+  code: EU
+  schedulerCron: "0 0 3 * * ?"
 
 keystore:
   type: JKS
