--- a/validation-services-parent/tsl-loader/src/main/resources/application.yaml
+++ b/validation-services-parent/tsl-loader/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 tsl:
-  loadAlwaysFromCache: false
+  loadFromCache: false
   url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
   code: EU
   schedulerCron: "0 0 3 * * ?"
