--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>json-path</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
 
         <!-- Testing -->
         <dependency>
