MAINTENANCE: added various small modifications

--- a/validation-services-parent/pdf-validation-service/src/test/resources/test-tsl-loader-props.yml
+++ b/validation-services-parent/pdf-validation-service/src/test/resources/test-tsl-loader-props.yml
@@ -1,8 +1,9 @@
 tsl:
-  loadFromCache: false
-  url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
-  code: EU
-  schedulerCron: "0 0 3 * * ?"
+  loader:
+    loadFromCache: false
+    url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
+    code: EU
+    schedulerCron: "0 0 3 * * ?"
 
 keystore:
   type: JKS
